--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "nanoid": "^5.0.3",
+    "nanoid": "^5.1.5",
     "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "shortid": "^2.2.16",
+    "typescript": "^5.8.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -21,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "lint:js": "eslint src/**/*.{ts,tsx}"
   },
   "eslintConfig": {
     "extends": [
